--- a/style.css
+++ b/style.css
@@ -68,6 +68,8 @@ font-family: 'Nanum Myeongjo', serif;
     padding-top: 30px;
     margin-left: 25%;
     margin-right: 25%;
+    color: gray;
+    margin-bottom: 30px;
 }
 
 .third {
@@ -82,4 +84,22 @@ font-family: 'Nanum Myeongjo', serif;
    padding: 50px;
 }
 
+
+.recipe{
+    width: 60%;
+    margin:5% 5%;
+    padding: 10px;
+    box-shadow: 2px 2px 10px gray;
+    border-radius: 20px;
+}
+.recipe-image img {width: 100%;}
+    
+.title{
+    text-align: center;
+}
+
+
+.fourth {
+    display: flex;}
+   
 
